<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewActivity.ViewActivityDashboard"
    android:padding="8dp">

    <ScrollView
        android:id="@+id/dashboardScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/dashboardLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/dashboardBottomNav"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/dashboardGoalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="@id/dashboardGoalText"
                app:layout_constraintLeft_toLeftOf="@id/dashboardGoalText"
                android:layout_marginTop="16dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="34dp"
                android:text="GOAL"/>

            <TextView
                android:id="@+id/dashboardGoalText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dashboardGoalTitle"
                app:layout_constraintRight_toLeftOf="@id/dashboardCalorieText"
                app:layout_constraintLeft_toLeftOf="@id/currentWeather"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:textSize="24sp"
                android:layout_weight="1"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:gravity="center"
                android:text=""/>

            <TextView
                android:id="@+id/dashboardIntake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="@id/dashboardCalorieText"
                app:layout_constraintLeft_toLeftOf="@id/dashboardCalorieText"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:textSize="34sp"
                android:text="INTAKE"/>

            <TextView
                android:id="@+id/dashboardCalorieText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dashboardIntake"
                app:layout_constraintRight_toRightOf="@id/currentWeather"
                app:layout_constraintLeft_toRightOf="@id/dashboardGoalText"
                android:layout_marginTop="4dp"
                android:textSize="24sp"
                android:layout_weight="1"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:gravity="center"
                android:text="2000 Calories Daily"/>

            <Button
                android:id="@+id/changeGoalButton"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:text="CHANGE GOAL"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dashboardCalorieText" />

            <TextView
                android:id="@+id/currentWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:padding="8dp"
                android:text="CURRENT WEATHER"
                android:textSize="34sp"
                app:layout_constraintBottom_toTopOf="@+id/weather"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changeGoalButton" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weather"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@+id/currentWeather"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/weatherImage"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/weatherImage"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@+id/currentWeather"
                app:layout_constraintRight_toLeftOf="@+id/weather"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/sun"/>


<!--            <Button-->
<!--                android:id="@+id/weatherButton"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginHorizontal="80dp"-->
<!--                android:layout_marginBottom="32dp"-->
<!--                android:text="WEATHER"-->
<!--                app:layout_constraintRight_toRightOf="parent"-->
<!--                app:layout_constraintLeft_toLeftOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/changeGoalButton"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"/>-->
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>