<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Home" />
    <item
        android:id="@+id/nav_hike"
        android:icon="@drawable/ic_hike_24px"
        android:title="Hikes" />
    <item
        android:id="@+id/nav_BMI"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="BMI" />
    <item
        android:id="@+id/nav_Pedometer"
        android:icon="@drawable/ic_walk_24dp"
        android:title="Pedometer" />
    <item
        android:id="@+id/toolbarAvatar"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="Profile" />
</menu>