...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewActivity.ViewActivityEditRegimen">

    <ScrollView
        android:id="@+id/editRegimenScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/editRegimenLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/editRegimenBottomNav"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
...
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textOff="Maintain"
                android:textOn="Maintain" />

            <ToggleButton
                android:id="@+id/gainToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/goalTypeText"
                app:layout_constraintLeft_toRightOf="@id/maintainToggle"
                android:textOff="Gain"
                android:textOn="Gain" />
...
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="24sp"
                android:text="WEEKLEY GOAL"/>

            <LinearLayout
                android:id="@+id/weeklyGoalLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/weeklyGoalText"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
...
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:textSize="18sp"
                    android:text="Lose"/>

                <EditText
                    android:id="@+id/weightGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType = "number"
                    android:layout_margin="2dp"
                    android:textSize="18sp"
                    android:hint="0"/>
...
                    android:textSize="18sp"
                    android:text="Lbs"/>
            </LinearLayout>

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/createRegimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/weeklyGoalLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
...
