...
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/ic_account_circle_black_24dp"/>


            <LinearLayout
                android:id="@+id/editProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/editProfilePhoto"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
...
                    android:inputType="date"
                    android:focusable="false"
                    android:hint="Set Birthday"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editProfileHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/editProfileBirthday"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Height"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editProfileWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/editProfileHeight"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
...
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="Select Country"/>-->
<!--            </LinearLayout>-->

            <LinearLayout
                android:id="@+id/editProfileSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/editProfileWeight"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/editProfileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/editProfileSex"
                app:layout_constraintLeft_toLeftOf="parent"
...
